--- a/events.html
+++ b/events.html
@@ -32,13 +32,23 @@
           <label>Name</label>
         </div>
         <div>
-          <input type="text" name="name" value="" placeholder="First Name and Last Name" required/>
+          <input type="text" name="name" value="" placeholder="Enter Full Name" required/>
         </div>
         <div>
           <label>E-Mail</label>
         </div>
         <div>
           <input type="text" name="email" value="" placeholder="john@yahoo.com" required/>
+        </div>
+          <label>Phone Number</label>
+        </div>
+        <div>
+          <input type="text" name="name" value="" placeholder="xxx-xxx-xxxx" required/>
+        </div>
+          <label>Phone Number</label>
+        </div>
+        <div>
+          <input type="text" name="Country of Residence" value="" placeholder="Country Name" required/>
         </div>
     </div>
   </body>
