--- a/events.html
+++ b/events.html
@@ -8,7 +8,7 @@
   <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width,initial-scale=1/0,shrink-to-fit=no"/>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/events.css">
     <script src="JScript/script.js"></script>
     <link rel="shortcut icon" href="media/ico.ico"/>
     <title>Trident-WebDesigns Events Page</title>
@@ -45,7 +45,7 @@
         <div>
           <input type="text" name="name" value="" placeholder="xxx-xxx-xxxx" required/>
         </div>
-          <label>Phone Number</label>
+          <label>Country of Residence</label>
         </div>
         <div>
           <input type="text" name="Country of Residence" value="" placeholder="Country Name" required/>
