--- a/events.html
+++ b/events.html
@@ -50,6 +50,9 @@
         <div>
           <input type="text" name="Country of Residence" value="" placeholder="Country Name" required/>
         </div>
+        <div>
+          <input type="submit" value="Learn Now!" onclick="return myFunction();"/>
+        </div>
     </div>
   </body>
   <footer>
