--- a/events.html
+++ b/events.html
@@ -40,6 +40,7 @@
         <div>
           <input type="text" name="email" value="" placeholder="john@yahoo.com" required/>
         </div>
+        <div>
           <label>Phone Number</label>
         </div>
         <div>
