--- a/events.html
+++ b/events.html
@@ -44,8 +44,9 @@
           <label>Phone Number</label>
         </div>
         <div>
-          <input type="text" name="name" value="" placeholder="xxx-xxx-xxxx" required/>
+          <input type="text" name="phone" value="" placeholder="xxx-xxx-xxxx" required/>
         </div>
+        <div>
           <label>Country of Residence</label>
         </div>
         <div>
