--- a/events.html
+++ b/events.html
@@ -41,19 +41,19 @@
           <input type="text" name="email" value="" placeholder="john@yahoo.com" required/>
         </div>
         <div>
-          <label>Phone Number</label>
-        </div>
-        <div>
           <label>Country of Residence</label>
         </div>
         <div>
           <input type="text" name="Country of Residence" value="" placeholder="Country Name" required/>
         </div>
         <div>
+          <label>Phone Number</label>
+        </div>
+        <div>
           <input type="text" name="phone" value="" placeholder="xxx-xxx-xxxx" required/>
         </div>
         <div>
-          <input type="submit" value="Learn Now!" onclick="return myFunction();"/>
+          <input type="submit" value="Get Involved Now!" onclick="return myFunction();"/>
         </div>
         </div>
   </body>
