--- a/events.html
+++ b/events.html
@@ -40,11 +40,6 @@
         <div>
           <input type="text" name="email" value="" placeholder="john@yahoo.com" required/>
         </div>
-        <div>
-          <label>Country of Residence</label>
-        </div>
-        <div>
-          <input type="text" name="Country of Residence" value="" placeholder="Country Name" required/>
         </div>
         <div>
           <label>Phone Number</label>
@@ -52,10 +47,22 @@
         <div>
           <input type="text" name="phone" value="" placeholder="xxx-xxx-xxxx" required/>
         </div>
-        <div>
-          <input type="submit" value="Get Involved Now!" onclick="return myFunction();"/>
-        </div>
-        </div>
+      <div>
+        <label>Continent of Residence</label>
+        <select id="continent" name="continent">
+            <option value="northamerica">North America</option>
+            <option value="southamerica">South America</option>
+            <option value="europe">Europe</option>
+            <option value="asia">Asia</option>
+            <option value="australia">Australia</option>
+            <option value="africa">Africa</option>
+            <option value="antartica">Antartica</option>
+    </select>
+      </div>
+      <div>
+        <input type="submit" value="Get Involved Now!" onclick="return myFunction();"/>
+      </div>
+    </div>
   </body>
   <footer>
     <p>Email: isud2018@gmail.com</p>
