--- a/events.html
+++ b/events.html
@@ -27,6 +27,7 @@
     </nav>
     <div>
       <h1>Sign Up to get the latest events!</h1>
+    </div>
       <form method="get" action="#null" autocomplete="on">
         <div>
           <label>Name</label>
@@ -49,6 +50,8 @@
         </div>
       <div>
         <label>Continent of Residence</label>
+      </div>
+      <div>
         <select id="continent" name="continent">
             <option value="northamerica">North America</option>
             <option value="southamerica">South America</option>
@@ -57,7 +60,7 @@
             <option value="australia">Australia</option>
             <option value="africa">Africa</option>
             <option value="antartica">Antartica</option>
-    </select>
+        </select>
       </div>
       <div>
         <input type="submit" value="Get Involved Now!" onclick="return myFunction();"/>
